--- a/estilo.css
+++ b/estilo.css
@@ -53,6 +53,7 @@ html{
 .inicio .contenido-seccion header .logo .color{
     background-color: #EABE3F;
     font-family: "Yellowtail";
+    border-radius: 5px;
 }
 .inicio .contenido-seccion header .nav-bar{
     position: fixed;
@@ -211,6 +212,7 @@ html{
     width: 20px;
     height: 30px;
     margin-right: 2px;
+    border-radius: 1px;
 }
 /* SECCION RESUMEN */
 .resumen{
